HISTORY
=======

History of changes to PHC (name of developer listed in brackets)::

    PloneHelpCenter 4.0b3 (unreleased)
    
    - Revamp helpcenter_topicview_main to show start-here items,
      topic counts.
      [davisagli]

    PloneHelpCenter 4.0b2 (2010-12-28)

    - Fix phc_stats template in Plone 4.
      [davisagli]

    - Fix import error in Plone 3.
      [miohtama]

    - Use the containment acquisition chain to get the parent
      attributes in ReferenceManualSection type.
      [dukebody]

    - Make listings respect the subtopics order set in the HelpCenter
      or type folders, instead of sorting alphabetically.
      Fixes http://plone.org/products/plonehelpcenter/issues/127.
      [dukebody]

    PloneHelpCenter 4.0b1 (2010-12-09)

    - Use ordering adapters in Plone 4 to sort items in sections.
      [dukebody]

    - Make the default view for PHC folders obey the items ordering
      set using the Contents tab. Formerly, they were sorted
      alphabetically by title.
      Fixes http://plone.org/products/plonehelpcenter/issues/121.
      [dukebody]

    - Allow all site-enabled markup types for PHC content, instead of
      a fixed list.
      Fixes http://plone.org/products/plonehelpcenter/issues/117.
      [dukebody]

    - Modify workflow definitions to disallow Anonymous users to see
      content inside hidden Help Centers.
      Fixes http://plone.org/products/plonehelpcenter/issues/118.
      [dukebody]

    - Remove the "Properties" tab for content-types, that was
      duplicating the Metadata schemata already present in the edit
      view in Plone 3.
      Fixes http://plone.org/products/plonehelpcenter/issues/119.
      [dukebody]

    - Make mail sending code compatible with Plone 3. PHC 4 is now
      compatible with both Plone 3 and 4.
      [dukebody]


    PloneHelpCenter 4.0a1 (2010-12-07)

    - Use lxml to turn image relative links into absolute for the
      one-page version of manuals. This introduces a new install